# intel-pin-vcpkg

./: README.md
.github/workflows/: run-test.yaml
custom_overlay/intel-pin/: FindIntelPIN.cmake  IntelPINConfig.cmake  portfile.cmake  usage  vcpkg.json
stack-debugger/: CMakeLists.txt  vcpkg-configuration.json
test/: CMakeLists.txt  CMakePresets.json  profiler.cpp  test.cpp  vcpkg.json
